More home page rework

--- a/DanceCalc/m4d/Views/Home/SiteMap.cshtml
+++ b/DanceCalc/m4d/Views/Home/SiteMap.cshtml
@@ -27,6 +27,12 @@
                     <li><a href="https://www.music4dance.net/blog/the-pink-martini-solution/">The Pink Martini Solution</a></li>
                     <li><a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">Help: How would you group this dance style?</a></li>
                     <li><a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">The “Dancing with the Stars” Solution</a></li>
+                    <li><a href="https://www.music4dance.net/blog/documentation-for-the-song-list/">Documentation for the song list</a></li>
+                    <li><a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">Wedding Music Part I: Can we dance the Foxtrot to our song?</a></li>
+                    <li><a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</a></li>
+                    <li><a href="https://www.music4dance.net/blog/documentation-for-the-tag-cloud/">Documentation for the Tag Cloud</a></li>
+                    <li><a href="https://www.music4dance.net/blog/documentation-for-the-tempo-counter-and-tempi-tempos-tools/">Documentation for the Tempo Counter and Tempi (tempos) tools</a></li>
+                    <!--<li><a href=""></a></li>-->
                 </ul>
             </li>
             <li><a href="/home/contact">Contact</a></li>
