--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -104,27 +104,17 @@
 <div class="row col-xs-12"><hr /></div>
 
 <div id="music" class="row col-md-12">
-    <h1 class="music">Music</h1>
-    <p class="big-text">The song list page can by found by clicking clicking the "Songs" item in the "Music" menu at the top of the page.  You'll start with  a list of songs and you can refine your search in many different ways.  Check some of them out in the illustration below.</p>
-</div>
-
-<div class="row col-md-12">
-    <img src="~/Content/song-page.png" alt="songs page" style="float: right; margin:10px" />
-    <ul style="list-style-type: upper-alpha" class="big-text">
-        <li><b>Dance Menu:</b> The dance menu will drop down to show all of the dance styles that we have cataloged. Clicking on any of the dances will filter the list to just those songs that can be danced to that style.  You can also see a list of dance styles on our <a href="/dances">dances page</a>.</li>
-        <li><b>Text Search:</b> Type the name of an artist or title of a song or a tag (like musical genre) here, click the search button to the right and get a list of the songs that include those words in the title, artist or tags.</li>
-        <li><b>More Options:</b> Clicking on this button will get you a few more options, including the ability to filter on a specific tempo range and limit your search to just songs that are linked to a particular streaming or purchase service (<a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Xbox Music</a>).</li>
-        <li><b>Play/Buy Buttons:</b> The play buttons will open a menu of the different places where you can listen to all or part of a song and purchase the song.  Please note that you must turn off pop-up blockers for this to work correctly and each service has a different set of questions that it will ask you before you get to actually playing the song.  This is much smoother the second time you use any particular service.</li>
-        <li><b>Song Title, Artist and Tempo:</b> Click on the "Title", "Artist" or "Tempo" column headers to sort the current list by song title or artist name, clicking again on the same header will sort in the other direction.  Clicking on any song title will take you to a page with additional details about the song.  Clicking on an Artist's name will take you to a list of songs by that artist.</li>
-        <li><b>Dances:</b> Clicking on the Dances column will sort the songs by popularity.  Each dance tag includes a popularity rating shown on how "filled up" the musical note is next to the dance name.</li>
-        <li><b>Dance Popover:</b> Clicking on any of the dance tags will open up a 'popover' with more info - clicking again on the same tag will close the 'popover'.  The popover always contains two links, one that will take you to the dance page for that dance style that includes a description the dance style, a top ten list and more. Dance names with an asterick next to them have additional tags on the association between the song and the dance style.</li>
-        <li><b>Tags Header:</b> The tag header lists the tags that are included and excluded in your current search.  Clicking on the 'x' in the header tag will remove it from the filter.</li>
-        <li><b>Tags:</b> Each song has a list of tags associated with the song.  Most of the current tags are musical genre tags (dark green), but we're starting to roll out a beta that allows our customers to add other kinds of tags and where possible when we're sourcing new music we tag it appropriately, for instance the Dancing with the Stars music is tagged as such.  You can add tags to either the included or the excluded list by clicking on a tag in the song list and choosing include or exclude.</li>
-        <li><b>Spotify Control:</b> If you have the Spotify Player installed, this control will play all of the songs in the current list that are linked to spotify tracks.</li>
-    </ul>
-</div>
-
-<div class="row col-md-12">
+    <h2 class="music"><img src="~/Content/music.png" alt="music" width="48" height="48"/>Music</h2>
+    <dl class="big-text">
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs to dance a specific dance style.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dance") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-styles-help/") @SmartLink.Posts("https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find out what dance styles can be danced to a song.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/song-list/") @SmartLink.Posts("https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Start with a musical genre (or other tags) and find songs to dance a particular style.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/tag") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find wedding songs and match them with dance styles.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/addtags?tags=%2BWedding:Other") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/wedding/")</dd>
+    </dl>
     <p>Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
     <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
@@ -133,13 +123,13 @@
 <div class="row col-xs-12"><hr /></div>
 
 <div id="tools" class="row col-md-12">
-    <h1 class="tools">Tools</h1>
-    <p class="neutral">
-        Do you have a favorite song (or songs) that you would like to match to a dance style? Use our <a href="/home/counter">dance counter page</a> to help you answer that question.
-    </p>
-    <p class="neutral">
-        Are you curious about how fast quickstep is compared to jive? Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to? Use our <a href="/home/tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.
-    </p>
+    <h2 class="tools"><img src="~/Content/tools.png" alt="music" width="48" height="48"/>Tools</h2>
+    <dl class="big-text">
+        <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Use our tempo counter tool to find the tempo of a song and match it to dance styles.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/counter") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tempo-counter/") @SmartLink.Posts("https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/")</dd>
+        <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Explore relationships between the meter and tempi of different dance styles and find songs that match.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/") @SmartLink.Posts("")</dd>
+    </dl>
     <p class="neutral">
         We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
     </p>
@@ -148,8 +138,8 @@
 <div class="row col-xs-12"><hr /></div>
 
 <div id="info" class="row col-md-12">
-    <h1 class="blog">Info</h1>
-    <p class="neutral">Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.</p>
+    <h2 class="blog"><img src="~/Content/info.png" alt="music" width="48" height="48" />Info</h2>
+    <p class="neutral">Are you looking for more information on how music relates to dance? Then please follow our <a href="https://www.music4dance.net/blog">blog</a>.</p>
     <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
     <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
     <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
