Introduce the concept of competition dances

--- a/DanceCalc/m4d/Views/Home/Home.cshtml
+++ b/DanceCalc/m4d/Views/Home/Home.cshtml
@@ -8,10 +8,7 @@
     var dances = new[]
     {
         new DanceClass{Title="Ballroom",Image="ballroom",
-            Dances=new List<DanceMapping> {new DanceMapping("Foxtrot"),new DanceMapping("Waltz"), new DanceMapping("Tango","tango-(ballroom)"), 
-                new DanceMapping("Cha Cha"), new DanceMapping("Rumba"), new DanceMapping("Swing","east-coast-swing"),
-                new DanceMapping("Samba"), new DanceMapping("Mambo"), new DanceMapping("Paso Doble"), new DanceMapping("Jive")
-            }},
+            Dances=new List<DanceMapping> {new DanceMapping("International Standard"),new DanceMapping("International Latin"),new DanceMapping("American Smooth"),new DanceMapping("American Rhythm")}},
         new DanceClass{Title="Swing",Image="swing",TopDance="swing",
             Dances=new List<DanceMapping> 
               {new DanceMapping("Lindy Hop"),new DanceMapping("East Coast Swing"),new DanceMapping("West Coast Swing"),new DanceMapping("Hustle"),
