--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -1,10 +1,16 @@
-﻿@model IEnumerable<SongCounts>
+﻿@using DanceLibrary
+@model IEnumerable<SongCounts>
 
 @{
     ViewBag.Title = "Dance Style Index";
     ViewBag.Description = "A list of partner dancing styles, including Ballroom, Salsa, Swing, and Tango.";
     ViewBag.ShowTempo = false;
     string[] boxes = { "LTN", "SWG", "FXT", "TNG", "WLZ", "MSC" };
+}
+
+@helper LinkCategory(string name)
+{
+    @Html.ActionLink(name, DanceObject.SeoFriendly(name), "dances")
 }
 
 
@@ -26,7 +32,8 @@
     }
 </div>
 
-<p class="col-md-12">Choose from the dances styles to get more information or click on the number next to the name to get a list of songs that are suitable to dance that dance to.</p>
+<p>Or check out our more traditional ballroom categorization of songs by going to our @LinkCategory("International Standard"), @LinkCategory("International Latin"), @LinkCategory("American Smooth") or @LinkCategory("American Rhythm") pages.</p>
+<p>Choose from the dances styles to get more information or click on the number next to the name to get a list of songs that are suitable to dance that dance to.</p>
 <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
 
 @{
