Fix some more bugs in tempi + a bit of cleanup

--- a/DanceCalc/m4d/Views/Dance/Category.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Category.cshtml
@@ -40,7 +40,7 @@
             <tr>
                 <td>@Html.ActionLink(sc.DanceName,sc.SeoName,"dances") </td>
                 <td>@d.Meter</td>
-                <td>@ShowTempo(d.DanceSportTempo, d.Meter, sc.DanceId)</td>
+                <td>@ShowTempo(d.TempoRange, d.Meter, sc.DanceId)</td>
                 <td>@ShowTempo(d.DanceSportTempo, d.Meter, sc.DanceId)</td>
                 <td>@ShowTempo(d.NDCATempoA, d.Meter, sc.DanceId)</td>
                 <td>@ShowTempo(d.NDCATempoB, d.Meter, sc.DanceId)</td>
