--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 }
 <html>
 <head>
+    <!-- TradeDoubler site verification 2516966 -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Music4Dance: Shall we dance...to music?</title>
