--- a/DanceCalc/m4d/Views/Dance/Category.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Category.cshtml
@@ -1,54 +1,15 @@
-﻿@using System.Activities.Statements
-@using DanceLibrary
+﻿@using DanceLibrary
 @model DanceCategory
 
 @{
     ViewBag.Title = @Model.Name;
     ViewBag.Description = "A description of the competition dance category " + @Model.Name + " along with tempo ranges and song lists.";
-    var international = @Model.Name.StartsWith("International");
+    var catType = @Model.Name.StartsWith("International") ? DanceCategoryType.International : DanceCategoryType.American;
 }
 
 @helper FullRoundName()
 {
     @Model.Name @(Model.Round.Count == 4 ? " four " : " five " )
-}
-
-@helper ShowTempo(TempoRange range, Meter meter, string danceId)
-{
-    var bpm = range.ToBpm(meter);
-    @Html.ActionLink(range.ToString(), "advancedsearch", "song", new { dances = danceId, tempomin = bpm.Min, tempomax = bpm.Max }, null)
-}
-
-@helper DanceTable(IEnumerable<CompetitionDance> dances, string title, bool international)
-{
-    <table class="table table-striped table-bordered">
-        <thead>@title</thead>
-        <tr>
-            <th>Name</th>
-            <th>Meter</th>
-            <th>MPM</th>
-            <th>DanceSport</th>
-            <th>NDCA @(international ? "Professional or Amateur" : "Silver/Gold")</th>
-            <th>NDCA @(international ? "Pro/Am" : "Bronze")</th>
-            <th>BPM</th>
-        </tr>
-        @foreach (var cat in dances)
-        {
-            var sc = cat.SongCount;
-            var d = cat.SpecificDance;
-            var bmp = d.TempoRange.ToBpm(d.Meter);
-            <tr>
-                <td>@Html.ActionLink(sc.DanceName,sc.SeoName,"dances") </td>
-                <td>@d.Meter</td>
-                <td>@ShowTempo(d.TempoRange, d.Meter, sc.DanceId)</td>
-                <td>@ShowTempo(d.DanceSportTempo, d.Meter, sc.DanceId)</td>
-                <td>@ShowTempo(d.NDCATempoA, d.Meter, sc.DanceId)</td>
-                <td>@ShowTempo(d.NDCATempoB, d.Meter, sc.DanceId)</td>
-                <td>@d.TempoRange.ToBpm(d.Meter)</td>
-            </tr>
-
-        }
-    </table>
 }
 
 @helper LinkCategory(string name)
@@ -60,11 +21,11 @@
 
 <p>@Model.Name is a category of competition ballroom dancing that is defined by the <a href="http://www.worlddancesport.org/Rule/Athlete/Competition">World Dance Council</a> and <a href="http://ndca.org/education/dances-and-tempi/">National Dance Council of America</a>.</p>
 
-@DanceTable(Model.Round,"An " + @FullRoundName() + "dance round consist of the following:",international)
+@DanceHelper.CategoryTable(Html, Model.Round, "An " + @FullRoundName() + "dance round consist of the following:", catType)
 
 @if (@Model.Extras != null)
 {
-    @DanceTable(Model.Extras, "Other dances categorized as " + @Model.Name + ", although they aren't part of the competition round, are:", international)
+    @DanceHelper.CategoryTable(Html, Model.Extras, "Other dances categorized as " + @Model.Name + ", although they aren't part of the competition round, are:", catType)
 }
 
 @{
@@ -77,3 +38,6 @@
 <p>
     Other categories of competition ballroom dancing are @LinkCategory(cats[0]), @LinkCategory(cats[1]) and @LinkCategory(cats[2]).
 </p>
+
+<p><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Explore relationships between the meter and tempi of different dance styles and find songs that match.
+@SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/")</p>
