Flashy buttons for external service login

--- a/DanceCalc/m4d/Views/Account/Register.cshtml
+++ b/DanceCalc/m4d/Views/Account/Register.cshtml
@@ -55,6 +55,10 @@
     </div>
 </div>
 
-@section Scripts {
+@section styles{
+    <link href="~/Content/auth-buttons.css" rel="stylesheet" type="text/css">
+}
+
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
