--- a/DanceCalc/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/DanceCalc/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -19,12 +19,14 @@
         {
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
-                <p>
+                <ul class="list-unstyled">
                     @foreach (AuthenticationDescription p in loginProviders)
                     {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        //<button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        var type = @p.AuthenticationType.ToLower();
+                        <li style="margin:1em"><button type="submit" class="btn-auth btn-@type large" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Sign in with <b>@p.AuthenticationType</b></button></li>
                     }
-                </p>
+                </ul>
             </div>
         }
     }
