Update homepage and interlink with help & blog

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -115,6 +115,8 @@
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/tag") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find wedding songs and match them with dance styles.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/addtags?tags=%2BWedding:Other") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/wedding/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs that match competion tempo ranges.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/american-rhythm") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-category/") @SmartLink.Posts("https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/")</dd>
     </dl>
     <p>Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
@@ -159,4 +161,8 @@
     <p class="neutral">When did you first learn to dance? For many people it was so that they could dance at their wedding... <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">[Read more]</a></p>
     <h4 class="blog">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</h4>
     <p class="neutral">What if you are particularly in love with one dance style or are just learning to dance one particular style and are looking for an inspiring first dance song in that style? <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">[Read more]</a></p>
+    <h4 class="blog">I'm a competition ballroom dancer, can I find practice songs that are a specific tempo?</h4>
+    <p class="neutral">The quick answer to this question is yes, definitely!
+
+First, many of the songs in our catalog have been tagged with a tempo, so it is easy... <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">[Read more]</a></p>
 </div>
