--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -120,7 +120,8 @@
                     @Html.ActionLink("Site Map", "sitemap", "Home") - 
                     @Html.ActionLink("Terms of Service","termsofservice","Home") - 
                     @Html.ActionLink("Privacy Policy", "privacypolicy","Home") - 
-                    @Html.ActionLink("Credits", "credits", "Home")
+                    @Html.ActionLink("Credits", "credits", "Home") - 
+                    <a href="@help">Help</a>
                     </p>
                 </footer>
             </div>
