More cleanup of song editor code + get the tag editor to handle keystrokes & focus appropriately

--- a/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
@@ -9,8 +9,8 @@
             <div class="modal-body">
                 <form style="margin: 10px">
                     <div class="form-group">
-                        <label for="new-tags">Tags:</label>
-                        <input type="text" class="form-control" id="new-tags" placehloder="tag1, tag2, tag 3, another tag" data-bind="textInput:newTags" />
+                        <label for="new-tags">Tags (separate tags with ','):</label>
+                        <input type="text" class="form-control" id="new-tags" placeholder="tag1, tag2, tag 3, another tag" data-bind="textInput:newTags"/>
                     </div>
                 </form>
             </div>
