A couple of quick fixes to registration

--- a/DanceCalc/m4d/Views/Manage/EditProfile.cshtml
+++ b/DanceCalc/m4d/Views/Manage/EditProfile.cshtml
@@ -5,9 +5,8 @@
     //ViewBag.Region = Model.RegionItems;
 }
 
-<h2>EditProfile</h2>
-<hr />
-
+<h2>About You</h2>
+<p>Please take a moment to answer a few questions about your location and communication preferences.</p>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
 {
     @Html.AntiForgeryToken()
