Make tagging a default attribute of a signed in user so that newly logged in users can have this ability without having to re-log in (which seems to be the only way to get role changes to take effect).

--- a/DanceCalc/m4d/Views/Song/SetupSongScript.cshtml
+++ b/DanceCalc/m4d/Views/Song/SetupSongScript.cshtml
@@ -11,8 +11,8 @@
     var serializer = new DataContractJsonSerializer(typeof (SongDetails));
     serializer.WriteObject(stream, Model);
     var songString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
-    var canEdit = User.IsInRole("canEdit") ? "true" : "false";
-    var canTag = User.IsInRole("canTag") ? "true" : "false";
+    var canEdit = User.IsInRole(DanceMusicService.EditRole) ? "true" : "false";
+    var canTag = User.Identity.IsAuthenticated ? "true" : "false";
     var userId = User.Identity.GetUserId();
 }
 
