--- a/DanceCalc/m4d/Views/ApplicationUsers/ChangeRoles.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/ChangeRoles.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "ChangeRoles";
 
     var roles = @Model.GetRoles(ViewBag.Roles);
-    var editCheck = roles.Contains("canEdit") ? "checked" : string.Empty;
-    var tagCheck = roles.Contains("canTag") ? "checked" : string.Empty;
-    var diagCheck = roles.Contains("showDiagnostics") ? "checked" : string.Empty;
-    var dbaCheck = roles.Contains("dbAdmin") ? "checked" : string.Empty;
+    var editCheck = roles.Contains(DanceMusicService.EditRole) ? "checked" : string.Empty;
+    var tagCheck = roles.Contains(DanceMusicService.TagRole) ? "checked" : string.Empty;
+    var diagCheck = roles.Contains(DanceMusicService.DiagRole) ? "checked" : string.Empty;
+    var dbaCheck = roles.Contains(DanceMusicService.DbaRole) ? "checked" : string.Empty;
 }
 
 <h2>ChangeRoles for @Model.UserName</h2>
